----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-11-24 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/common.lib.php: Use preg again, it just needs a bit more
      escaping of \ (once for PHP and once for PCRE).
    * css/phpmyadmin.css.php: Make server selection in left frame same size as
      on other places.
    * main.php: One more regex escaping fix.
    * lang/chinese_big5: Updated, thanks to Siu Sun (siusun).
    * lang/indonesian: Updated, thanks to Rachim Tamsjadi (tamsy).
    * lang/latvian: Updated, thanks to Sandis Jerics (saaa2002).
    * translators.html: Updated email for Hindi translator.

2003-11-23 Alexander M. Turek  <rabus@users.sourceforge.net>
    * server_privileges.php3: while (list() = each()) is not always as bad as
      one might think ;-p

2003-11-22 Garvin Hicking <me@supergarv.de>
    * ./*: More PHP3-compatibility removal, see 2003-11-20.

2003-11-22 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_operations.php: display "Add constraints" only
      if there are foreign keys in current table
    * libraries/common.lib.php: revert back to previous logic at line 1108
      because of regex problem (when only_db is used)

2003-11-21 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_move_copy.php: typo about constraints

2003-11-21 Michal Cihar  <nijel@users.sourceforge.net>
    * scripts/create-release.sh: Udated information what is needed to change on
      home page to currect status.

2003-11-20 Alexander M. Turek  <rabus@users.sourceforge.net>
    * server_databases.php, server_processlist.php, server_status.php,
      server_variables.php: Removed some php 3 / MySQL 3.21 compatibility code.
    * README: Updated requirements.
    * scripts/create-release.sh: Create Documentation.txt when building the
      distribution kits.
    * Documentation.txt, scripts/updatedocs.sh: Romoved.

2003-11-20 Michal Cihar  <nijel@users.sourceforge.net>